admin pajnel update

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -158,7 +158,7 @@
     "emailError": "Bitte geben Sie den Benutzernamen ein oder löschen Sie dieses Feld",
     "error": "Fehler",
     "feed": "Futter",
-    "firstName": "Vorname",
+    "first_name": "Vorname",
     "forgotPass": "Passwort vergessen",
     "forgotPasswordPage": "Seite Passwort vergessen",
     "formError": "Ein Fehler ist aufgetreten",
@@ -171,7 +171,7 @@
     "kanban": "Kanban",
     "keywords": "Irgendwelche Schlüsselwörter?",
     "kg": "kg",
-    "lastName": "Nachname",
+    "last_name": "Nachname",
     "leafletMap": "Leaflet Karten",
     "loading": "Wird geladen...",
     "lock": "Sperren",
@@ -427,7 +427,7 @@
       "firstNameError": "Vorname ist erforderlich",
       "gender": "Geschlecht",
       "info": "Info",
-      "lastNameError": "Nachname ist erforderlich",
+      "last_nameError": "Nachname ist erforderlich",
       "location": "Ort",
       "login": "Email/Login",
       "loginError": "E-Mail/Login ist erforderlich",
